fix shaddow clipping

--- a/style.css
+++ b/style.css
@@ -10,8 +10,9 @@
   --glass-border: rgba(255, 255, 255, 0.25);
   --glass-blur: 8px;
   --glass-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
-  --glass-hover-shadow: 0 10px 22px rgba(0, 0, 0, 0.12);
-
+  --glass-hover-shadow:
+          0 18px 40px rgba(0,0,0,0.25),
+          0 30px 60px rgba(0,0,0,0.15);
   --accent: rgb(255, 117, 24);
 }
 
@@ -218,7 +219,7 @@ nav {
 /* SECTIONS */
 
 section {
-  padding-top: 4vh;
+  padding: 5rem;
   min-height: 80vh;
   margin: 0 10rem;
 }
